tests/whiley/valid/test_495.wyal
define count_loopinvariant_34(int n, int i) is:
    (n > 0) && ((i >= 0) && (i <= n))


assert "loop invariant not established by first iteration":
    forall(int i, int i$1, int n):
        if:
            i == 0
            n > 0
            i$1 == (i + 1)
        then:
            count_loopinvariant_34(n, i$1)


